--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -10,7 +10,31 @@
 .nav__list {
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 .nav__link {
     color: #2e363e;
+}
+.nav__notification {
+    background-color: tomato;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    
+    position: absolute;
+    left: 36%;
+    bottom: 50%; 
+}
+.nav__newpoint {
+    background-color: tomato;
+    width: 5px;
+    height: 5px;
+    border-radius: 2.5px;
+    position: absolute;
+    right: 0%;
+    bottom: 75%;
 }
