--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&family=Yanone+Kaffeesatz:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 @import "reset.css";
 @import "variables.css";
@@ -6,12 +6,16 @@
 /*Coponents*/
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
 
 
 /*Screens*/
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body {
-    font-family: 'Yanone Kaffeesatz', sans-serif;
-    height: 1000vh;
+    color: #2e363e;
+    font-family: 'Roboto', sans-serif;
+   
 }
