--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 40px var( --horizontal-space);
+    margin-bottom: 15px;
 }
 .screen-header__title {
     font-size: 30px;
@@ -10,4 +11,8 @@
 }
 .screen-header__icons span {
     margin-left: 20px;
+}
+.cog {
+    top: 4.5%;
+    right: 5%;
 }
