--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -25,6 +25,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin-right: 7px;
     
 }
 .status-bar__column .fa-battery-full {
