--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,4 +1,8 @@
+.user-component {
+    justify-content: space-between;
+    margin-bottom: 13px;
 
+}
 .user-component__column:first-child,
 .user-component {
     display: flex;
@@ -22,4 +26,26 @@
 .user-component__avatar--xl {
     width: 80px;
     height: 80px;
+}
+.user-component__avatar--sm {
+    width: 60px;
+    height: 60px;
+    border-radius: 25px;
+}
+.user-component__title--not-bold {
+font-weight: 400;
+
+
+}
+
+.user-component__column:last-child {
+    color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+}
+.user-component__time {
+    margin-bottom: 10px;
+    display: block;
 }
