--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -12,7 +12,18 @@
 .screen-header__icons span {
     margin-left: 20px;
 }
-.cog {
-    top: 4.5%;
-    right: 5%;
+.newpoint__cog {
+    top: 4.8%;
+    right: 4%;
+}
+@keyframes rotateCog {
+    from {
+        transform: none;
+    }
+    to {
+        transform: rotateZ(360deg)
+    }
+}
+.screen-header__icons .fa-cog:hover {
+animation: rotateCog 1.5s linear infinite;
 }
