--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -17,7 +17,7 @@
 .friends-screen__channel {
     margin-top: 25px;
     
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    border-top: var(--main-border);
     padding-top: 15px;
 }
 .friends-screen__channel-header {
@@ -25,4 +25,27 @@
     display: flex;
     justify-content: space-between;
     color: rgba(0, 0, 0, 0.5);
+}
+@keyframes hideSplashScreen {
+    from { 
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+#splash-screen {
+    background-color: var(--pink);
+    color: white;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 132px;
+    animation: hideSplashScreen 0.5s ease-in-out forwards;
+    animation-delay: 0.5s;
 }
