--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -40,14 +40,15 @@
 }
 
 #Login-form input:focus {
-    border-color: var(--yellow);
+    border-color: var(--pink);
 }
 #Login-form input[type="submit"] {
-    background-color: var(--yellow);
+    background-color: var(--pink);
     cursor: pointer;
     font-size: 20px;
     padding: 20px 0px;
     border-radius: 5px;
+    color: white;
 }
 
 #Login-form a {
