이스터 에그

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,8 @@
 @import "screens/more.css";
 @import "screens/settings.css";
 @import "screens/chat.css";
+@import "screens/easter.css";
+
 
 body {
     color: #2e363e;
