이스터 에그2

--- a/css/screens/easter.css
+++ b/css/screens/easter.css
@@ -1,9 +1,9 @@
 #easter-egg {
-    background-color: var(--pink);
     width: 100vw;
     height: 100vh;
+    background-color: var(--pink);
 
 }
 #easter-egg span {
-    font-size: 36px;;
+    font-size: 36px;
 }
